# random-game

./: .gitattributes  .gitignore  README.md  build.py  launcher.py  pyproject.toml  random_game.spec
.github/workflows/: ci.yml  release.yml
src/random_game/: __init__.py  __main__.py  models.py  paths.py  randomizer.py  service.py  storage.py
src/random_game/data/: games_seed.json
src/random_game/ui/: __init__.py  components.py  main_window.py  theme.py
tests/: conftest.py  test_models.py  test_randomizer.py  test_service.py  test_storage.py
