[project]
name = "random-game"
version = "0.1.0"
description = "Рандомайзер ПК-игр из пула must-play с отслеживанием прогресса"
requires-python = ">=3.12"
authors = [{ name = "Nikita" }]
license = { text = "MIT" }
dependencies = [
    "customtkinter>=5.2.2",
    "pillow>=10.4.0",
]

[project.scripts]
random-game = "random_game.__main__:main"

[project.gui-scripts]
random-game-gui = "random_game.__main__:main"

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-cov>=5.0.0",
    "pyinstaller>=6.10.0",
    "ruff>=0.6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/random_game"]

[tool.hatch.build.targets.wheel.force-include]
"src/random_game/data/games_seed.json" = "random_game/data/games_seed.json"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-ra"
markers = [
    "unit: модульные тесты",
    "integration: интеграционные тесты",
]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "C4", "SIM", "RUF"]
ignore = ["E501"]
